--- a/part-2/package.json
+++ b/part-2/package.json
@@ -4,7 +4,12 @@
   "description": "Phase 3 Challenge Part 2",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha js:babel-core/register ./db_test.js",
+    "dbinit": "dropdb grocery_store; createdb grocery_store; psql grocery_store < ./schema.sql; psql grocery_store < ./load-data.sql",
+    "dropdb": "dropdb grocery_store",
+    "createdb": "createdb grocery_store",
+    "schemaUpdate": "psql grocery_store < ./schema.sql",
+    "seedData": "psql grocery_store < ./load-data.sql"
   },
   "author": "Fode Diop",
   "license": "MIT",
