--- a/part-2/package.json
+++ b/part-2/package.json
@@ -14,6 +14,7 @@
   "author": "Fode Diop",
   "license": "MIT",
   "dependencies": {
+    "node-print": "0.0.4",
     "pg-promise": "^6.5.1",
     "postgresql": "0.0.1"
   },
