--- a/part-2/package.json
+++ b/part-2/package.json
@@ -13,6 +13,7 @@
   "author": "Fode Diop",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "node-print": "0.0.4",
     "pg-promise": "^6.5.1",
     "postgresql": "0.0.1"
